<p> and <span> fix color contrast

--- a/style/_faq.scss
+++ b/style/_faq.scss
@@ -14,7 +14,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #545963;
         font-size: 1rem;
     }
     
