--- a/style/_main.scss
+++ b/style/_main.scss
@@ -17,7 +17,8 @@ main {
         }
 
         p {
-            color: $grayish-blue;
+            // color: $grayish-blue;
+            color: #545963;
             font-size: 1rem;
         }
 
