--- a/style/_section features.scss
+++ b/style/_section features.scss
@@ -13,7 +13,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #545963;
         font-size: 1rem;
     }
 
@@ -44,7 +45,8 @@
 
             span {
                 margin-top: auto;
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #545963;
             }
 
             .active_bottom_border {
@@ -57,7 +59,8 @@
 
         .active {
             span {
-                color: $very-dark-blue;
+                // color: $very-dark-blue;
+                color: #545963;
                 transition: 0.2s;
             }       
 
@@ -89,7 +92,8 @@
         }
 
         p {
-            color: $grayish-blue;
+            // color: $grayish-blue;
+            color: #545963;
         }
 
         .info {
